modify readme to include dependencies (or lack thereof)
Signed-off-by: Kokonico <kokonico@duck.com>

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
 3.0
 performance improvements???
 benchmark stuff
+make lognodes not crap themselves when their log file is deleted while they're running
