add test for removing logfile, Documentation updates, and More optimization, why not?
Signed-off-by: Kokonico <kokonico@duck.com>

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,2 @@
 3.0
-performance improvements???
-benchmark stuff
-make lognodes not crap themselves when their log file is deleted while they're running
+Async Logging (as an option probably, not default. the tests HATE it as they share the same log file)
